--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         La cocina boliviana ha evolucionado a lo largo de los siglos, adaptando recetas e ingredientes indígenas con técnicas y sabores traídos por los colonizadores españoles y otros inmigrantes. Recientemente, ha ganado popularidad a nivel internacional, en parte gracias a chefs bolivianos que están promoviendo ingredientes autóctonos como la quinua y el chuño en la alta cocina.
         
         En resumen, la cocina boliviana es diversa, rica en sabores y profundamente enraizada en la historia y cultura del país. La fusión de tradiciones ancestrales con influencias modernas ha dado lugar a una gastronomía vibrante que sigue evolucionando.</p>
-    
+    <img src="imagenes/seo.png" alt="Lupa">
 </body>
 </html>
