--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="imagenes/seo.png" tipe="image/x-icon">
 </head>
 <body>
-    <h1>COCINA BOLIVIANA</h1>
+    <h1 style="background-color: aquamarine;color: bisque;text-decoration: underline dashed;">COCINA BOLIVIANA</h1>
     <p>La cocina boliviana es un reflejo de la <sup>diversidad cultural</sup> y geográfica del país, influenciada por sus raíces indígenas, la herencia española y la fusión de otras tradiciones culinarias europeas y africanas. Debido a la gran variedad de climas, que van desde los altiplanos fríos hasta las zonas tropicales, la gastronomía de Bolivia ofrece una gama muy amplia de ingredientes y platos únicos que varían según la región.
 <b>Principales ingredientes y productos</b> 
         Uno de los ingredientes básicos en la cocina boliviana es la papa, que se cultiva en una gran variedad de tipos. Bolivia es uno de los países con mayor biodiversidad en papas, con cientos de variedades diferentes que se usan en diversos platos. Otro alimento importante es la quinua, un pseudocereal originario de los Andes, rico en nutrientes y utilizado tanto en platos tradicionales como en recetas modernas.
